--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   text-align: center;
 }
 
-.logo {
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -39,4 +39,13 @@
 
 .read-the-docs {
   color: #888;
+} */
+
+/* -------------- */
+
+.showBlock{
+  width: 700px;
+  height: 500px;
+  background-color: aliceblue;
+  float: left;
 }
