--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 .main{
-  margin: 40px 0;
 }
 
 .view{
   width: 900px;
-  background-color: rgb(216, 216, 216);
+  height: 100vh;
+  padding: 40px 0 0 0 ;
+  /* background-color: rgb(216, 216, 216); */
   left: 50%; 
   transform: translateX(-50%);
   position: relative;
@@ -16,7 +17,14 @@
   position: absolute;
   width: 500px;
   height: 350px;
+  margin: 30px 0;
   border: 1px solid #000000;
+}
+
+.cardBlock{
+  width: 100%;
+  height: 100%;
+
 }
 
 .selectedImage{
@@ -53,6 +61,23 @@
   overflow: hidden;
   text-shadow: -1px -1px white, 1px 1px #bfbfbf
 }
+
+.btn-warning{
+  opacity: 0.3;
+  position: absolute;
+  top: 92%;
+  left: 0;
+  transition: opacity 0.3s ease; 
+
+  /* 滑鼠滑入狀態 */
+  &:hover {
+    opacity: 1;
+  }
+}
+
+/* .btn-warning:hover{
+  opacity: 0.8;
+} */
 
 /* menu */
 .menu{
@@ -94,9 +119,9 @@
 
 .popup{
   position: fixed;
-  top: 0px;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%, 0%);
+  transform: translate(-50%, -50%);
   width: 700px;
   /* height: 400px; */
   background-color: #ffffff;
@@ -156,8 +181,13 @@ a:hover{
 #inform{
   /* display: block; */
   width: 900px;
+  height: 580px;
   margin: 40px 0;
   left: 50%;
   transform: translateX(-50%);
   position: relative;
+}
+
+.lineDiv{
+  margin: 16px 0;
 }
